--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
+    "react-bits": "^1.0.5",
     "react-dom": "^19.1.1",
     "shadcn": "^3.3.1",
     "tailwind-merge": "^3.3.1"
